<resources>
    <string name="app_name">PracticalTest01Var01</string>
    <string name="practical_test01_var01_secondary">PracticalTest01Var01Secondary</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="navigate_to_secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
</resources>
